--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MaterialPills</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_normal_pills">NormalPillsActivity</string>
+    <string name="title_activity_delete_pills">DeletePillsActivity</string>
 </resources>
