feat(materialpillbox module): Add new properties  :sparkles:
- stylable: maxPills, pillTextColor, pillBackground, closeIcon, pillSelectedBackground

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="title_activity_normal_pills">NormalPillsActivity</string>
     <string name="title_activity_delete_pills">DeletePillsActivity</string>
     <string name="add_pill">Add Pill</string>
-    <string name="delete_all">Delete All</string>
+    <string name="delete_all">Delete Pill</string>
 </resources>
