--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
-    <string name="app_name">MaterialPills</string>
+    <string name="app_name">MaterialPillsBox</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_normal_pills">NormalPillsActivity</string>
-    <string name="title_activity_delete_pills">DeletePillsActivity</string>
     <string name="add_pill">Add Pill</string>
     <string name="delete_all">Delete Pill</string>
 </resources>
