--- a/materialpillsbox/src/main/res/values/strings.xml
+++ b/materialpillsbox/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MaterialPillsBox</string>
     <string name="im_a_pill">I\'m a pill</string>
+    <string name="max_numbers_pills_error_message">Max Number of Pills</string>
+    <string name="empty_list_error_message">Empty List</string>
 </resources>
